Fix spacing between articles on blog page.

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -425,6 +425,9 @@
 .blog {
     @include flex-site-content;
     @include content-area;
+    article {
+        margin-bottom: 4rem;
+    }
     .entry-header {
         position: relative;
         img {
